Fixed Footer styles Updated bourbon.io vendor file to apply proper color in contrast-switch mixin

--- a/public/assets/css/default/login.css
+++ b/public/assets/css/default/login.css
@@ -36,12 +36,12 @@
   --clr-secondary-rgb: 51, 136, 153;
   --clr-accent: #ff781f;
   --clr-accent-rgb: 255, 120, 31;
-  --clr-dark-text: #1a1a1a;
-  --clr-dark-text-rgb: 26, 26, 26;
+  --clr-dark-text: #262626;
+  --clr-dark-text-rgb: 38, 38, 38;
   --clr-white: whitesmoke;
   --clr-white-rgb: 245, 245, 245;
-  --clr-black: #1a1a1a;
-  --clr-black-rgb: 26, 26, 26;
+  --clr-black: #262626;
+  --clr-black-rgb: 38, 38, 38;
   --clr-grey-dark: gray;
   --clr-grey-dark-rgb: 128, 128, 128;
   --clr-grey-medium: #cccccc;
@@ -49,13 +49,13 @@
   --clr-grey-light: #f0f0f0;
   --clr-grey-light-rgb: 240, 240, 240;
   /* Default Element Styles */
-  --bs: 0 0 25px rgba(26, 26, 26, 0.25);
-  --bs-1: 0 10px 25px rgba(26, 26, 26, 0.25);
+  --bs: 0 0 25px rgba(38, 38, 38, 0.25);
+  --bs-1: 0 10px 25px rgba(38, 38, 38, 0.25);
   --bs-2: 0 20px 40px -15px rgba(0, 0, 0, 0.25);
-  --bsh: 0px 0px 10px 2px rgba(26, 26, 26, 0.15);
+  --bsh: 0px 0px 10px 2px rgba(38, 38, 38, 0.15);
   --br: 7px;
   --ls: 2px;
-  --ts: 0 2px 5px rgba(26, 26, 26, 0.18);
+  --ts: 0 2px 5px rgba(38, 38, 38, 0.18);
   --section-margin: 0rem;
   /*  Navigation Styles */
   --nav-height: 60px;
@@ -114,7 +114,8 @@ body {
 
 body {
   background-color: whitesmoke;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: var(--ff-sans);
+  color: #262626;
   font-weight: 400;
   line-height: 1.6;
   display: flex;
@@ -157,8 +158,9 @@ p {
 }
 
 a {
-  color: var(--clr-dark);
-  transition: all 250ms ease;
+  color: #262626;
+  text-decoration: none;
+  transition: all 125ms ease;
 }
 a:hover {
   color: var(--clr-accent);
@@ -206,11 +208,9 @@ main {
 
 .container {
   margin: auto;
-  padding-right: 2rem;
-  padding-left: 2rem;
   width: 100%;
   display: grid;
-  grid-template-columns: minmax(1rem, 1fr) minmax(auto, 90ch) minmax(1rem, 1fr);
+  grid-template-columns: minmax(2rem, 1fr) minmax(auto, 1200px) minmax(2rem, 1fr);
 }
 .container > * {
   grid-column: 2/3;
@@ -579,7 +579,7 @@ textarea:focus {
   padding-right: 1em;
   padding-left: 1em;
   background: #264d73;
-  color: #fff;
+  color: whitesmoke;
   height: 60px;
   line-height: 60px;
   display: flex;
@@ -596,7 +596,7 @@ textarea:focus {
 }
 .navbar .logo a {
   text-decoration: none;
-  color: #fff;
+  color: whitesmoke;
   font-size: 2rem;
   padding: 0;
   margin: 0;
@@ -605,7 +605,7 @@ textarea:focus {
 }
 .navbar .nav {
   background: #4080bf;
-  color: #fff;
+  color: whitesmoke;
   white-space: nowrap;
   text-align: center;
   position: absolute;
@@ -649,11 +649,11 @@ textarea:focus {
 }
 .navbar .nav a {
   text-decoration: none;
-  color: #fff;
+  color: whitesmoke;
   display: block;
 }
 .navbar .toggle-label {
-  color: #fff;
+  color: whitesmoke;
   cursor: pointer;
   font-size: inherit;
   display: block;
@@ -775,81 +775,57 @@ textarea:focus {
   top: 0px;
 }
 
-/* Footer Styles */
 .footer {
-  width: 100%;
-  position: relative;
-  align-self: flex-end;
+  margin-top: auto;
+  background: var(--clr-primary);
+  color: whitesmoke;
+  font-size: 0.9rem;
 }
 .footer a {
-  color: var(--clr-white);
-  text-decoration: none;
+  color: whitesmoke;
+  transition: all 125ms ease;
 }
 .footer a:hover {
   color: var(--clr-accent);
 }
-
-/* footer1 */
-.footer1 {
-  background-color: var(--clr-primary);
-  color: var(--clr-white);
-  font-size: 0.8rem;
-  font-weight: 300;
-  letter-spacing: 1.1px;
-  padding: 1rem;
+.footer ul {
+  list-style: none;
 }
-.footer1 .container {
+.footer .footer1 {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1rem;
-  align-items: flex-start;
+  gap: 2rem;
 }
 @media screen and (min-width: 768px) {
-  .footer1 .container {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  .footer .footer1 {
     grid-template-columns: auto 1fr auto auto;
-    gap: 1rem;
   }
 }
-.footer1 h5 {
+.footer .footer1 h5 {
+  margin-bottom: 1rem;
   font-size: 1.2rem;
   text-shadow: var(--ts);
-  color: var(--clr-white);
-  margin-bottom: 1rem;
 }
-.footer1 .footer-social .social-icon {
+.footer .footer1 .footer-social .social-icon {
   padding: 0.25rem 0.5rem;
 }
-.footer1 .footer-address * + * {
+.footer .footer1 .footer-address * + * {
   margin-top: 1rem;
 }
-
-/* footer2 */
-.footer2 {
-  background-color: var(--clr-primary-dark) !important;
-  padding: 1rem;
-  width: 100%;
+.footer .footer2 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-top: 1rem;
+  background: var(--clr-primary-dark);
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
-  align-content: center;
-  text-align: center;
-}
-.footer2 p {
-  margin: 0;
-  color: var(--clr-grey-light);
-  font-size: 0.8rem;
-  font-weight: var(--fw-l);
-}
-.footer2 .container {
-  display: flex;
-  flex-flow: column nowrap;
   align-items: center;
-  justify-content: center;
 }
-
-.nav-footer__nav {
-  list-style: none;
+.footer .footer2 p {
+  margin: 0;
+  font-size: 0.8rem;
+  color: whitesmoke;
 }
 
 .pagination {
