--- a/structure/sass/default/global/_defaults.scss
+++ b/structure/sass/default/global/_defaults.scss
@@ -19,8 +19,9 @@ body {
 }
 
 body {
-  background-color: $clr-white;
-  font-family     : -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: $bg;
+  font-family: var(--ff-sans);
+  color: contrast-switch($bg);
   font-weight     : 400;
   line-height     : 1.6;
 
@@ -67,10 +68,10 @@ p {
 }
 
 a {
-  color          : var(--clr-dark);
-  // text-decoration: none;
+  color          : contrast-switch($bg);
+  text-decoration: none;
 
-  transition: all 250ms ease;
+  transition: all 125ms ease;
 
   &:hover {
     color: var(--clr-accent);
@@ -119,11 +120,10 @@ main {
 
 .container {
   @include margin(auto);
-  @include padding(null 2rem);
   width: 100%;
 
   display              : grid;
-  grid-template-columns: minmax(1rem, 1fr) minmax(auto, 90ch) minmax(1rem, 1fr);
+  grid-template-columns: minmax(2rem, 1fr) minmax(auto, $max-container-width) minmax(2rem, 1fr);
 
   >* {
     grid-column: 2 / 3;
